relay-general/src/store/transactions/snapshots/relay_general__store__transactions__processor__tests__normalize_transaction_names.snap
---
source: relay-general/src/store/transactions/processor.rs
expression: replaced
---
[
    "/*",
    "/*",
    "/*",
    "/test/*/url",
]
