relay-general/src/store/transactions/snapshots/relay_general__store__transactions__processor__tests__scrub_identifiers_before_rules.snap
---
source: relay-general/src/store/transactions/processor.rs
expression: event
---
{
  "type": "transaction",
  "transaction": "/remains/rule-target/*",
  "transaction_info": {
    "source": "url"
  },
  "timestamp": 1619420400.0,
  "start_timestamp": 1619420341.0,
  "contexts": {
    "trace": {
      "trace_id": "4c79f60c11214eb38604f4ae0781bfb2",
      "span_id": "fa90fdead5f74053",
      "op": "default",
      "type": "trace"
    }
  },
  "spans": [],
  "_meta": {
    "transaction": {
      "": {
        "rem": [
          [
            "int",
            "s",
            21,
            31
          ]
        ],
        "val": "/remains/rule-target/1234567890"
      }
    }
  }
}
